--- a/doxygen-awesome.css
+++ b/doxygen-awesome.css
@@ -134,7 +134,7 @@ html {
 
     /* code block colors */
     --code-background: #f5f5f5;
-    --code-foreground: var(--page-foreground-color);
+    --code-foreground: #ff0099;
 
     /* fragment colors */
     --fragment-background: #F8F9FA;
@@ -1084,8 +1084,8 @@ div.toc h3 {
 div.toc li {
     padding: 0;
     background: none;
-    line-height: var(--toc-font-size);
-    margin: var(--toc-font-size) 0 0 0;
+    line-height: 20px;
+    margin: 15px 0 0 0;
 }
 
 div.toc li::before {
@@ -1937,14 +1937,14 @@ div.dynheader img[src="closed.png"] {
  */
 
 hr {
-    margin-top: var(--spacing-large);
     margin-bottom: var(--spacing-large);
+    margin-top: 8.0em;
     height: 1px;
     background-color: var(--separator-color);
     border: 0;
 }
 
-.contents hr {
+/* .contents hr {
     box-shadow: 100px 0 0 var(--separator-color),
                 -100px 0 0 var(--separator-color),
                 500px 0 0 var(--separator-color),
@@ -1953,7 +1953,7 @@ hr {
                 -1500px 0 0 var(--separator-color),
                 2000px 0 0 var(--separator-color),
                 -2000px 0 0 var(--separator-color);
-}
+} */
 
 .contents img, .contents .center, .contents center, .contents div.image object {
     max-width: 100%;
